--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-markdown": "9.0.1",
+    "remark-gfm": "4.0.0",
+    "remark-math": "6.0.0",
+    "rehype-katex": "7.0.0",
+    "mermaid": "10.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
