--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^22.14.0",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^5.0.0",
+    "jsdom": "^27.4.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vitest": "^4.0.16"
