--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "rehype-raw": "7.0.0",
     "remark-gfm": "3.0.1",
     "remark-math": "5.1.1",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.9",
+    "katex": "^0.16.27"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
